# governed-rank

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
blog/: README.md  budget-knob.md  compas-fairness.md  content-moderation-news.md  cookieless-targeting.md  ecommerce-sessions.md  fair-lending.md  fraud-detection.md  gap-calibration.md  governed-rank-launch.md  grocery-reranking-tafeng.md  healthcare-ranking.md  instacart-product-discovery.md  movielens-recommendations.md  orthogonalization-explained.md  rag-safety.md  social-posts.md
docs/: CORE_FEATURES.md  INTRODUCTION.md  TUTORIAL.md
notebooks/: content_moderation.ipynb  demo.ipynb  fairness_compas.ipynb  fraud_detection.ipynb  objective_discovery.ipynb  rag_safety.ipynb
src/mosaic/: __init__.py  activation.py  counterfactual.py  evidence_graph.py  exploration_pool.py  family_bootstrap_priors.py  feature_extractor.py  gap_calibration.py  govern.py  isotonic_projection.py  lens_ads.py  moment_category_nmf.py  moment_drift.py  moment_nmf.py  moment_priors.py  moments_taxonomy.py  mosaic_scorer.py  orthogonalization.py  rank_protection.py  reasons.py  satiation.py  steering_guardrails.py  time_signatures.py  utils.py
src/mosaic/_compat/: __init__.py  loaders.py  state.py
src/mosaic/discovery/: __init__.py  api.py  engine.py  models.py
tests/: test_due_diligence_comprehensive.py  test_lens_ads.py  test_moment_drift.py  test_moment_eval_reports.py  test_new_algorithm.py  test_satiation.py  test_steering_guardrails.py
