[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "governed-rank"
version = "0.1.0"
description = "MOSAIC: Margin-Orthogonal Mission Steering for Accuracy-Preserving, Controllable Recommendations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "PatternaAi" },
]
keywords = ["recommendations", "ranking", "fairness", "governed", "mosaic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "matplotlib>=3.5",
    "pandas>=1.4",
]

[project.optional-dependencies]
torch = ["torch>=1.12"]
flask = ["flask>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
