[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "governed-rank"
version = "0.1.0"
description = "Governed reranking — steer any ranked list toward policy objectives without breaking accuracy"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "PatternaAi", email = "ronald.doku@gmail.com" },
]
keywords = [
    "reranking",
    "content-moderation",
    "trust-safety",
    "rag-safety",
    "fairness",
    "fraud",
    "audit",
    "governed",
    "mosaic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
torch = ["torch>=1.12"]
flask = ["flask>=2.0"]
viz = ["matplotlib>=3.5", "pandas>=1.4"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "matplotlib>=3.5",
    "pandas>=1.4",
]

[project.urls]
Homepage = "https://github.com/PatternaAi/governed-rank"
Repository = "https://github.com/PatternaAi/governed-rank"
Documentation = "https://github.com/PatternaAi/governed-rank#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[tool.hatch.build.targets.sdist]
exclude = [
    "mosaic_data_tests/",
    "results/",
    "scripts/",
    "paper/",
    "models/",
    "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
